2005-07-05  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/command.rb (cmd_save): always save the 'editor' attribute.

2005-07-04  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/pluginutil.rb (apply_plugin): catch all exceptions
	(reported by Kouhei Sutou).

	* style/default/html_formatter.rb (token_to_s): always use the
	'plugin_error' method (reported by Kouhei Sutou).

	* style/default/html_formatter.rb (toc): return more simple HTML.

	* hiki/util.rb (plugin_error): escape exception messages (reported
	by Kouhei Sutou).

2005-07-03  Kouhei Yanagita <sugi@dream.big.or.jp>
	* style/default/html_formatter.rb (token_to_s): a double quote for
	colspan is lacked.

2005-07-02  Kazuhiko  <kazuhiko@fdiary.net>
	* template/adminform.html: revise HTML (reported by Fu).

2005-07-01  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/xmlrpc/xmlrpc.cgi: use 'Plugin#save' instead of
	'HikiDB#save'.

2005-06-29  Kazuhiko  <kazuhiko@fdiary.net>
	* plugin/02help.rb (help_enabled?): add a new method.

	* template/edit.html, template/i.edit.html: set a value in a
	'update_timestamp' checkbox (reported by KAWAI Masahiro).

	* plugin/02help.rb, plugin/en/02help.rb, plugin/ja/02help.rb: add
	a new plugin for support editing (by NAGASAKI).

	* hiki/db/flatfile.rb (store): fix a bug in making a new page
	without updating timestamp.

	* misc/plugin/comment.rb (comment_post): not add emphasize and
	link tags around a name (reported by Kouhei Sutou).

	* plugin/00default.rb (br): add a new plugin method.

	* hiki/command.rb (code_conv): add a new method for mobile agents.

	* misc/plugin/amazon.rb: for a little modified of web site changing.

2005-06-28  Kouhei Yanagita <sugi@dream.big.or.jp>
	* theme/hiki/hiki.css: revise the default theme.

	* data/text/SideMenu, misc/text/rd+/SideMenu: SideMenu should
	begin with a heading level 1.

	* doc/README.txt, doc/INSTALL.txt: revise the documents.

	* doc/README.en: add English README.

2005-06-27  Kazuhiko  <kazuhiko@fdiary.net>