@@ -1,4 +1,7 @@
 2005-07-05  Kazuhiko  <kazuhiko@fdiary.net>
+	* hiki/db/flatfile.rb (store): ignore Errno::EPERM in File::utime
+	(reported by hashi).
+
 	* hiki/command.rb (cmd_save): always save the 'editor' attribute.
 
 2005-07-04  Kazuhiko  <kazuhiko@fdiary.net>
